--- a/src/components/TableList/TableList.scss
+++ b/src/components/TableList/TableList.scss
@@ -9,12 +9,8 @@
       align-items: center;
       justify-content: space-between;
     }
-    @include responsive-property(
-      padding,
-      $padding-m 0,
-      $padding-t 0,
-      $padding-d 0
-    );
+    @include responsive-property(padding, 1.5rem 0, $padding-t 0, $padding-d 0);
+    @include responsive-property(border-bottom, 1px solid $color-border, none);
   }
   &__form {
     @include flex;
@@ -23,6 +19,11 @@
     @include responsive-property(flex-wrap, wrap, nowrap);
 
     @include responsive-property(padding-top, 1rem, 0);
+
+    @include tablet {
+      width: 60%;
+      justify-content: flex-end;
+    }
   }
 
   &__search {
@@ -32,7 +33,7 @@
     @include flex;
     gap: 1rem;
     @include responsive-property(width, 100%, 100%);
-    @include responsive-property(max-width, none, 11.5625rem, 17.125rem);
+    @include responsive-property(max-width, none, 100%);
   }
 
   &__input {
@@ -55,7 +56,10 @@
     color: $color-bg;
     padding: 0 1rem;
     @include responsive-property(line-height, 36px, 38px);
-    // width: 100%;
+
     text-align: center;
+    @include tablet {
+      max-width: 11.5rem;
+    }
   }
 }
