--- a/src/pages/WarehouseListPage/WarehouseListPage.scss
+++ b/src/pages/WarehouseListPage/WarehouseListPage.scss
@@ -1,5 +1,2 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
-.item-page {
-  @include responsive-margin;
-}
